Fix login form scrolling and background cutoff

--- a/src/index.css
+++ b/src/index.css
@@ -611,7 +611,7 @@ textarea.form-control {
 
 /* Mesh Background 2D UI */
 .mesh-bg-container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
